# make_it_braille

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  default.nix  flake.nix
src/: braille.rs  cli.rs  dithering.rs  lib.rs  main.rs
src/cli/: mod.rs  util.rs
