[package]
name = "make_it_braille"
version = "0.6.0"
edition = "2021"
authors = ["Juliapixel <julia@juliapixel.com>"]
license = "MIT"
description = "A CLI tool and library to manipulate unicode braille images"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "make_it_braille"
required-features = ["bin"]

[lib]
crate-type = ["lib"]

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"], optional = true }
env_logger = { version = "0.11", optional = true }
image = { version = "0.25", optional = true, default-features = false }
log = { version = "0.4", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"], optional = true }
thiserror = { version = "2.0", optional = true }

[features]
default = ["image"]
bin = [
    "dep:thiserror",
    "dep:clap",
    "dep:env_logger",
    "dep:log",
    "dep:reqwest",
    "dep:image",
    "image/gif",
    "image/jpeg",
    "image/ico",
    "image/png",
    "image/pnm",
    "image/tga",
    "image/tiff",
    "image/webp",
    "image/bmp",
    "image/hdr",
    "image/dds",
    "image/exr",
    "image/qoi",
    "image/avif"
]
image = ["dep:image"]
